Add method to get unified rest text with blanks replacement for parsed meme

--- a/web/index.hbs
+++ b/web/index.hbs
@@ -31,12 +31,12 @@ blockquote {
     <div>
     <pre>
         <code class="nohighlight">
-{{md}}
+{{meme}}
         </code>
     </pre>
     </div>
     <div style="margin-left: 20px;">
-{{{html}}}
+    <img src="{{svg_file}}"/>
     </div>
 </div>
 
